# musicc

./: package-lock.json  package.json  tailwind.config.cjs
public/: index.html
src/: App.tsx  main.tsx  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  resources.rc  resources.res  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/files/: mod.rs
src/components/: audioPlayer.tsx  audioSeek.tsx  controlsPanel.tsx  directoryCard.tsx  disableContext.tsx  homePanel.tsx  libraryNavigation.tsx  musicArt.tsx  navBar.tsx  rootDirectoryCard.tsx  songCard.tsx  timeLabel.tsx  volumeSlider.tsx
src/context/: songsContext.tsx
src/hooks/: useAudioTime.tsx  useDebounced.tsx
src/screens/: filesScreen.tsx  playlistsScreen.tsx  preferences.tsx  searchScreen.tsx
src/store/: store.ts
src/utils/: limitedqueue.ts  queue.ts
