[package]
name = "musicc"
version = "0.0.1"
description = "A music player"
authors = ["Gabriel Kaszewski"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["cli", "dialog-open", "dialog-save", "fs-all", "global-shortcut-all", "notification-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
id3 = "*"
metaflac = "*"
walkdir = "2.3.3"
dirs = "5.0.1"
base64 = "0.21.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
